catalytic_table_to_struct/example/src/non_compiling_code/failing_wrong_type_primitive.stderr
error[E0277]: the trait bound `i32: From<&str>` is not satisfied
  --> src/non_compiling_code/failing_wrong_type_primitive.rs
   |
   |     query!("select * from test_table where b = ? and c = ?", b, b);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `i32`
   |
   = help: the following other types implement trait `From<T>`:
             <f32 as From<i16>>
             <f32 as From<i8>>
             <f32 as From<u16>>
             <f32 as From<u8>>
             <f64 as From<f32>>
             <f64 as From<i16>>
             <f64 as From<i32>>
             <f64 as From<i8>>
           and 72 others
   = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
